<resources>
    <string name="app_name">QuipmentTask</string>
    <string name="customer_name">Customer Name</string>
    <string name="pickup_address">Pickup Address</string>
    <string name="dropoff_address">Dropoff Address</string>
    <string name="price">Price</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="remove_all">Remove all</string>
    <string name="next">Next</string>

    <string name="display_customer_name">Customer name: %1$s</string>
    <string name="display_pickup_address">Pickup Address: %1$s</string>
    <string name="display_dropoff_address">Dropoff Address: %1$s</string>
    <string name="display_price">Price: %1$s</string>
    <string name="display_pickup_time">Pickup Time: %1$s</string>
    <string name="navigate">Navigate</string>

</resources>