<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/edtCustomerName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/customer_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Name"
        android:inputType="text" />

    <EditText
        android:id="@+id/edtPickupAddress"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/pickup_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/edtCustomerName"
        android:autofillHints="Pickup Address"
        android:inputType="text" />

    <EditText
        android:id="@+id/edtDropOffAddress"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="Dropoff Address"
        android:hint="@string/dropoff_address"
        android:inputType="text"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPickupAddress" />

    <EditText
        android:id="@+id/edtPrice"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="price"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDropOffAddress" />

    <EditText
        android:id="@+id/edtTime"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="Pickup Time"
        android:hint="@string/pickup_time"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPrice"
        android:clickable="true"
        android:focusable="false"
        android:inputType="none"
        android:longClickable="false"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintTop_toBottomOf="@+id/barrier_below_buttons"/>

    <Button
        android:id="@+id/btnClear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/clear"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTime"
        app:layout_constraintEnd_toStartOf="@id/guideline1"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTime"
        app:layout_constraintStart_toEndOf="@id/guideline1"
        app:layout_constraintWidth_percent="0.4" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_below_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="btnSave,btnClear" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1"
        app:layout_constraintTop_toBottomOf="@+id/barrier_below_buttons"/>

    <Button
        android:id="@+id/btnRemoveAll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/remove_all"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier_below_buttons"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintWidth_percent="0.4"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/barrier_below_buttons"
        app:layout_constraintWidth_percent="0.4"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>